<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.developer.deportologo.com.developer.sports.MainActivity"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_Page"
            android:textColor="@color/textcolorwhite"
            android:textSize="@dimen/textprincipalsize"
            android:textAlignment="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/textcolorwhite"
            android:textSize="@dimen/textdescription"
            android:layout_marginBottom="@dimen/marginprincipaltext"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_continue"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/btnprincipal"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="btncontiuar_AE"
            />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
