<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.developer.deportologo.com.developer.sports.MainActivity"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margenconclution">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conclusion"
            android:textSize="@dimen/textconclution"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@string/seguir"
            android:text="@string/conformequestion"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/marginprincipaltext"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            ></TextView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SI"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textSize="@dimen/textdescription"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NO"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textdescription"
            android:textStyle="bold"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>